<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.myhooks</groupId>
    <artifactId>myhooks</artifactId>
    <version>1.0.0</version>
    <packaging>jar</packaging>

    <name>myhooks</name>
    <description>JasperReports pre-commit / commit-msg hook (Java edition)</description>

    <properties>
        <!-- Compile to Java 17 bytecode regardless of the local JDK. -->
        <maven.compiler.release>17</maven.compiler.release>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <!-- Initial pins; confirm/adjust in US-00's first full build. -->
        <jasperreports.version>7.0.6</jasperreports.version>
        <lombok.version>1.18.46</lombok.version>
        <junit.version>5.11.4</junit.version>
        <picocli.version>4.7.6</picocli.version>
        <javaparser.version>3.26.3</javaparser.version>
        <java-diff-utils.version>4.16</java-diff-utils.version>
        <languagetool.version>6.8</languagetool.version>
        <jna.version>5.12.1</jna.version>
    </properties>

    <dependencies>
        <!-- The real JasperReports engine: schema, compiler, expression model. -->
        <dependency>
            <groupId>net.sf.jasperreports</groupId>
            <artifactId>jasperreports</artifactId>
            <version>${jasperreports.version}</version>
        </dependency>

        <!-- jsonql query support (SQL -> jsonql migration in the clear step);
             the core jar only maps language="jsonql" to the factory class, the
             class itself lives here. Without it JRXmlLoader cannot load a
             migrated jsonql report. -->
        <dependency>
            <groupId>net.sf.jasperreports</groupId>
            <artifactId>jasperreports-json</artifactId>
            <version>${jasperreports.version}</version>
        </dependency>

        <!-- Lombok: compile-time only boilerplate reduction. -->
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>${lombok.version}</version>
            <scope>provided</scope>
        </dependency>

        <!-- Declarative CLI parsing with help text and validation. -->
        <dependency>
            <groupId>info.picocli</groupId>
            <artifactId>picocli</artifactId>
            <version>${picocli.version}</version>
        </dependency>

        <!-- AST-based Java expression parsing (literal-safe formatting). -->
        <dependency>
            <groupId>com.github.javaparser</groupId>
            <artifactId>javaparser-core</artifactId>
            <version>${javaparser.version}</version>
        </dependency>

        <!-- Hunk-based multi-line diffs. -->
        <dependency>
            <groupId>io.github.java-diff-utils</groupId>
            <artifactId>java-diff-utils</artifactId>
            <version>${java-diff-utils.version}</version>
        </dependency>

        <!-- Real Java spell + grammar checker (commitmsg step). -->
        <dependency>
            <groupId>org.languagetool</groupId>
            <artifactId>language-en</artifactId>
            <version>${languagetool.version}</version>
        </dependency>

        <!-- Silence LanguageTool's SLF4J "no provider" warning on every run. -->
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-nop</artifactId>
            <version>2.0.16</version>
        </dependency>

        <!-- Windows console access (CONIN$/CONOUT$ raw mode + VT processing). Only
             loaded on Windows; the POSIX path keeps using /dev/tty + stty. -->
        <dependency>
            <groupId>net.java.dev.jna</groupId>
            <artifactId>jna</artifactId>
            <version>${jna.version}</version>
        </dependency>

        <!-- Test framework. -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
                <configuration>
                    <release>${maven.compiler.release}</release>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                            <version>${lombok.version}</version>
                        </path>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.5.2</version>
            </plugin>

            <!-- Build a runnable fat jar for the pre-commit hook. -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.6.0</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <createDependencyReducedPom>false</createDependencyReducedPom>
                            <transformers>
                                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                    <mainClass>com.myhooks.Main</mainClass>
                                </transformer>
                            </transformers>
                            <!-- JasperReports and its deps ship signed jars; strip the
                                 signature files so the shaded jar loads cleanly. -->
                            <filters>
                                <filter>
                                    <artifact>*:*</artifact>
                                    <excludes>
                                        <exclude>META-INF/*.SF</exclude>
                                        <exclude>META-INF/*.DSA</exclude>
                                        <exclude>META-INF/*.RSA</exclude>
                                    </excludes>
                                </filter>
                            </filters>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
